fixed z-index and <header>

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 @media (min-width: 320px) {
   .header {
     position: fixed;
+    z-index: 50;
     width: 100%;
     height: 64px;
     padding: 10px 20px;
